--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colorama==0.4.3
 distlib==0.3.1
 Django==2.2.10
 django-crispy-forms==1.9.2
+django-environ==0.4.5
 filelock==3.0.12
 flake8==3.8.4
 isort==5.5.4
