--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,28 @@
-asgiref==3.2.10
+appdirs==1.4.4
+astroid==2.4.2
+colorama==0.4.3
+distlib==0.3.1
 dj-database-url==0.5.0
 Django==2.2.10
+django-crispy-forms==1.9.2
 django-environ==0.4.5
 django-heroku==0.3.1
+filelock==3.0.12
+flake8==3.8.4
+gunicorn==20.0.4
+isort==5.5.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 psycopg2==2.8.6
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pylint==2.6.0
+pylint-django==2.3.0
+pylint-plugin-utils==0.6
 pytz==2020.1
+six==1.15.0
 sqlparse==0.3.1
+toml==0.10.1
+virtualenv==20.0.33
 whitenoise==5.2.0
+wrapt==1.12.1
